Improve postman collection, swagger and fix authorisation bugs
