# src/routes.js
@@ -21,6 +21,12 @@ module.exports = {
       scopes: ['write:groups', 'all:groups']
     }
   },
+  '/groups/health': {
+    get: {
+      controller: 'HealthController',
+      method: 'checkHealth'
+    }
+  },
   '/groups/:groupId': {
     get: {
       controller: 'GroupController',
@@ -89,12 +95,6 @@ module.exports = {
     get: {
       controller: 'GroupMembershipController',
       method: 'getGroupMembersCount'
-    }
-  },
-  '/groups/health': {
-    get: {
-      controller: 'HealthController',
-      method: 'checkHealth'
     }
   }
 }
